# pfsense-to-mikrotik-routerboard

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  caveats.md  migration-guide.md
overrides/: .weshouse.yaml.swp  example.yaml
pfmk/: __main__.py  cli.py  init_overrides.py  model.py  overrides.py  parser.py  summary.py
pfmk/emitters/: __init__.py  _common.py  ddns.py  dhcp.py  dns.py  firewall_filter.py  firewall_nat.py  interfaces.py  routing.py  system.py  wireguard.py
tests/: test_emitters_ddns.py  test_emitters_dhcp.py  test_emitters_dns.py  test_emitters_firewall_filter.py  test_emitters_firewall_nat.py  test_emitters_interfaces.py  test_emitters_routing.py  test_emitters_system.py  test_emitters_wireguard.py  test_init_overrides.py  test_parser.py  test_summary.py
tests/fixtures/: expected_system.rsc  minimal.xml
