[tool.poetry]
name = "pfmk"
version = "0.1.0"
description = "Generate MikroTik RouterOS .rsc scripts from pfSense XML backups"
authors = ["pfmk contributors"]
readme = "README.md"
packages = [{ include = "pfmk" }]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = ">=5.4"
jinja2 = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
pfmk = "pfmk.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
